# Rag-for-small-company

./: .gitignore  README.md  deps.py  embed.py  main.py  pyproject.toml  query.py  requirements.txt  retriever.py  utils.py
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  deps.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
apps/backend/features/auth/: routes.py  service.py
apps/backend/features/departments/: models.py  repository.py  routes.py
apps/backend/features/documents/: dto.py  models.py  repository.py  routes.py  service.py
apps/backend/features/google_drive/: google_drive_service.py
apps/backend/features/ingestion/: custom_ocr.py  dto.py  embed.py  reader.py  tasks.py
apps/backend/features/projects/: repository.py  routes.py
apps/backend/features/query/: chat_routes.py  filter_handler.py  models.py
apps/backend/features/user_projects/: repository.py  routes.py
apps/backend/features/users/: repository.py  routes.py
apps/backend/infrastructure/: config.py
apps/backend/infrastructure/databases/: db.py  orm.py
apps/backend/infrastructure/databases/scripts/: add_document_state.sql  seed_departments.sql
apps/backend/scripts/: health_check.py  test_ocr.py  verify_streaming.py  worker.py  worker_entrypoint.sh
apps/frontend/public/: info.txt
apps/frontend/src/: index.css
apps/frontend/src/components/landing/: FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  IntegrationsSection.tsx  Navbar.tsx  PricingSection.tsx
apps/frontend/src/components/layout/: DashboardLayout.tsx
apps/frontend/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  LandingPage.tsx
databases/: db.py  vector_db.py
features/auth/: routes.py  service.py
features/departments/: dto.py  models.py  repository.py  routes.py
features/documents/: repository.py  routes.py
features/google_drive/: .gitignore  google_drive_service.py  main.py
features/ingestion/: dto.py  embed.py  reader.py
features/projects/: repository.py  routes.py
features/query/: filter_handler.py  models.py  retriever.py  service.py
features/user_projects/: repository.py  routes.py
features/users/: dto.py  models.py  repository.py  routes.py
infrastructure/: vector_store_provider.py
infrastructure/databases/: db.py  vector_db.py
infrastructure/databases/sqlite/: local.db-info  local.db-shm  local.db-wal
ingestion/: embed.py
models/: document.py  project.py  query_request.py  user.py
projects/: write.py
repositories/: documents.py  projects.py  users.py  users_projects.py
routes/: documents.py  documents_dto.py  embed_dto.py  projects.py  users.py  users_dto.py  users_projects.py
scripts/: create_documents_table.py
services/: query.py  rag.py
services/google_drive/: google_drive_service.py  main.py
services/ingestion/: embed.py  reader.py
templates/: query.html
(+15 files in other folders)
